footer-align-corrected

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,7 @@ body{
     margin:0;
     background-color: #000000;
     min-width: 80vh;
+    min-height: 80vh;
 }
 
 nav{
@@ -164,6 +165,7 @@ footer{
     text-align: center;
     border-top-left-radius:2rem;
     border-top-right-radius:2rem;
+    margin-top: 3.8rem;
 }
 h3{
     margin-bottom:1rem ;
